--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
   align-items: center;
 }
 .model{
-  height:250px;
+  height:450px;
   width:300px;
   background: #fff;
 }
@@ -35,4 +35,11 @@ button{
   color:#fff;
   background: orange;
   cursor: pointer;
+}
+.card_event_show{
+  width:300px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 4px 0px #c1c1c1;
+  margin: auto;
+  padding-bottom:10px;
 }
